# fastapiproj

./: .env  Dockerfile  README.md  alembic.ini  apply_migrations.sh  docker-compose.yml  main.py  pytest.ini  requirements.txt
.github/workflows/: main.yml
blog-app/blog-app/: pyproject.toml
migrations/: env.py
migrations/versions/: 950a5b28ed38_create_users_table.py  f17be03ff900_description_of_the_migration.py  f2cfe8aae5c7_initial_migration.py
src/app/: asgi.py  main.py
src/app/api/: articles.py  auth.py  email.py  users.py
src/app/database/: database.py  models.py
src/app/schemas/: authuser.py  post.py  user.py
src/app/templates/: index.html
src/tests/: test_articles.py  test_auth.py
tasks/: celeryconfig.py  tasks.py
